# bist-trader-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: trade-assistant.mdc
.github/workflows/: pytest.yml
docs/: ANALYSIS_PIPELINE.md  COMPOSITION_SETUP.md  LINKEDIN_POST.md  MASTER_PLAN_TRADE_ASSISTANT.md  PA_CHECKLIST_TR.md  PERFORMANCE_AND_CONSISTENCY.md  README.md  TRADE_ASSISTANT.md  TURIB_AND_TV_ANALYSIS.md  quickstart.md
docs/images/: README.md
scripts/: _last_trade_plan.json  _pa_overlay.pine  _tv_ohlcv.json  capture_fusion_screenshot.py  capture_linkedin_screenshots.py  e2e_pa_live.py  launch_tv_debug.bat  probe_turib.py  smoke_test.py  verify_pa_integration.py
src/bist_trader_mcp/: __init__.py  __main__.py  _browser.py  _cache.py  _wip.py  analysis_confidence.py  backtest.py  bist_calendar.py  bist_eod.py  bist_sectors.py  bist_snapshot.py  bond_math.py  calendar_data.py  chart_draw_coords.py  chart_drawing_styles.py  chart_scenarios.py  chat_report.py  correlation.py  crypto.py  data_quality.py  deribit.py  elliott_detail.py  elliott_mtf.py  elliott_projections.py  elliott_wave.py  eod_htf_fallback.py  evds.py  fear_greed.py  fundamental_context.py  fundamental_enrich.py  fundamental_ratios.py  fundamental_score.py  fundamental_technical_fusion.py  fx.py  global_fx.py  global_markets.py  hazine.py  http_utils.py  iv_surface.py  kap.py  (+37 more)
src/bist_trader_mcp/pine_recipes/: __init__.py  pa_trade_overlay.pine  tr_basis_monitor.pine  tr_foreign_flow.pine  tr_iv_surface.pine  tr_kap_marker.pine  tr_macro_backdrop.pine  tr_margin_pulse.pine
tests/: __init__.py  test_analysis_confidence.py  test_backtest.py  test_bist_calendar.py  test_bist_eod.py  test_bond_math.py  test_cache.py  test_calendar.py  test_chart_draw_coords.py  test_chart_scenarios.py  test_chat_report.py  test_correlation.py  test_data_quality.py  test_deribit.py  test_elliott_detail.py  test_elliott_mtf.py  test_elliott_projections.py  test_elliott_wave.py  test_fundamental_context.py  test_fundamental_ratios.py  test_fundamental_wiring.py  test_fusion.py  test_fx_forward.py  test_iv_surface.py  test_market_assistant.py  test_market_profiles.py  test_option_chain.py  test_options_math.py  test_pa_extensions.py  test_pa_imbalances.py  test_pa_range.py  test_pa_setups.py  test_pa_structure.py  test_parsers.py  test_performance.py  test_portfolio.py  test_portfolio_opt_kelly.py  test_position_design.py  test_realized_vol.py  test_repo_curve.py  (+11 more)
