[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bist-trader-mcp"
version = "0.2.1"
description = "BIST Trader MCP — TR finance MCP server: TCMB EVDS, BIST EOD, KAP, VIOP, options math, Pine v6 recipes. Companion to tradesdontlie/tradingview-mcp."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Enes Parlak", email = "eparlak996@gmail.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "turkey",
    "bist",
    "borsa-istanbul",
    "tcmb",
    "evds",
    "viop",
    "kap",
    "tradingview",
    "pine-script",
    "claude",
    "llm",
    "trading",
    "finance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dateutil>=2.9.0",
    # PDF parser — used by hazine.py to read the quarterly DİBS borrowing
    # strategy bulletin. Light dep (~5 MB) so we ship it in the base set.
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
# Required to unlock KAP / MKK / Takasbank / etc. — sites that block
# direct HTTP calls and only serve data via in-browser XHR. After
# installing this extra you must also run:
#   python -m playwright install chromium
browser = [
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/Enesp4rl4k/bist-trader-mcp"
Issues = "https://github.com/Enesp4rl4k/bist-trader-mcp/issues"
Repository = "https://github.com/Enesp4rl4k/bist-trader-mcp"

[project.scripts]
bist-trader-mcp = "bist_trader_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bist_trader_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

# Test fixtures that mirror real upstream document formats (PDF rows
# with 12 monthly columns) are intentionally wider than the project's
# normal line-length budget.
[tool.ruff.lint.per-file-ignores]
"tests/test_parsers.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
